<resources>
    <string name="app_name">Pet App</string>
    <string name="Sample">Sample</string>
    <string name="adoption">Adoption</string>
    <string name="caretaking">Caretaking</string>
    <string name="connection">Connections</string>
    <string name="event">Events</string>
    <string name="map">View Map</string>
    <string name="settings">Settings</string>
    <string name="out">Log out</string>
    <string name="sort">Sort by</string>
    <string name="distance">Distance</string>
    <string name="increasing">Increasing Age</string>
    <string name="decreasing">Decreasing Age</string>
    <string name="recent">Recently Joined</string>
    <string name="reset">Reset</string>
    <string name="done">Done</string>
    <string name="myConnections">My Connections</string>
    <string name="homeLocation">Lucknow</string>
    <string name="home">Home</string>
    <string name="feeds">Feeds</string>
    <string name="chats">Chats</string>
    <string name="description">Content Description</string>
    <string name="name">Name</string>
    <string name="lastMessage">Hey there, new to the pet app</string>
    <string name="chatItemTime">14:40</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dog">Dog</string>
    <string name="lucknow">Lucknow</string>
    <string name="pet_categories">Pet Categories</string>
    <string name="sort_by">sort by</string>
    <string name="log_in">Log-in</string>
    <string name="email">Email</string>
    <string name="email_hint">Your email id</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forum">Forum</string>
    <string name="login_button">Login</string>
    <string name="create_account">Don\'t have an account?</string>
    <string name="signUp">Sign-Up</string>
    <string name="alternative_login">Or login using</string>
    <string name="your_pet">Your Pet</string>
    <string name="buddy_name">Your buddy\'s name is</string>
    <string name="pet_name">Name of your pet</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="pet_description">A little about him/her</string>
    <string name="pet_40words_limit">40 words</string>
    <string name="next">Next</string>
    <string name="add_image">Add an image</string>
    <string name="upload">Upload</string>
    <string name="click">Click</string>
    <string name="finish">Finish</string>
    <string name="about_owner">About Owner</string>
    <string name="your_name">Your name</string>
    <string name="username">Username</string>
    <string name="overline">¯</string>
    <string name="recent_for_event">Recent</string>
    <string name="upcoming_for_event">Upcoming</string>
    <string name="sample_id">YashinSingh01</string>
    <string name="sample_password">password</string>
    <string name="cat">Cat</string>
    <string name="bird">Bird</string>
    <string name="fish">Fish</string>
    <string name="feed_name">Rakesh</string>
    <string name="type">Type</string>
    <string name="breeding">Breeding</string>
    <string name="walking">Walking</string>
    <string name="create_description">Description</string>
    <string name="description_hint">Anything you want to add…</string>
    <string name="search">Search</string>
    <string name="sideNavigation">Side Navigation</string>
    <string name="newFeedEventHeading">Event heading</string>
    <string name="newFeedCaption">Caption that fits your mood…</string>
    <string name="gallery">Gallery</string>
    <string name="post">Post</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="venue">Venue</string>
    <string name="visibility">Visibility</string>
    <string name="back">Back</string>
    <string name="hh">HH</string>
    <string name="mm">MM</string>
    <string name="dd">DD</string>
    <string name="yy">YYYY</string>
    <string name="pub">Public</string>
    <string name="pri">Private</string>
    <string name="caption">Caption that fits your mood…</string>
</resources>